--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,7 +13,5 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: Install deps
-	    run: python -m pip install --upgrade pip
       - name: Test
-        run: python main/test.py
+        run: python /test.py
