--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install deps
         run: python -m pip install --upgrade pip
       - name: Test
-        run: python /test.py
+        run: python test.py
