--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,12 +8,28 @@ on:
     - main
     - dev
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: self-hosted
+
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Install deps
-        run: python -m pip install --upgrade pip
-      - name: Test
-        run: python test.py
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run:
+          python -m pip install --upgrade pip
+          pip install pytest
+
+  test:
+    needs: build
+    runs-on: self-hosted
+
+    steps:
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Test with pytest
+        run: pytest
