--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           python-version: "3.10"
       - name: Test with pytest
-        run: pytest
+        run: python -m unittest -v test
