--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,4 +32,5 @@ jobs:
         with:
           python-version: "3.10"
       - name: Test with pytest
-        run: pytest
+        run:
+          test
