--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run:
           python -m pip install --upgrade pip
-          pip install unittest
+          pip install pytest
 
   test:
     needs: build
@@ -31,5 +31,5 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: Test with unittest
+      - name: Test with pytest
         run: python -m unittest -v test
