--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,7 +9,7 @@ on:
     - dev
 jobs:
   build:
-    runs-on: ubuntu-hosted
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
 
   test:
     needs: build
-    runs-on: ubuntu-hosted
+    runs-on: self-hosted
 
     steps:
       - name: Set up Python 3.10
